force-app/main/default/objects/Escalation_Log__c/Escalation_Log__c.object-meta.xml
<CustomObject>
    <label>Escalation Log</label>
    <pluralLabel>Escalation Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Escalation Log Number</label>
        <displayFormat>EL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>