force-app/main/default/objects/Escalation_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>EscalationLogs</relationshipName>
</CustomField>