force-app/main/default/objects/Escalation_Log__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <type>TextArea</type>
</CustomField>