force-app/main/default/objects/Escalation_Log__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <label>New Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>NewOwnerEscalationLogs</relationshipName>
</CustomField>