force-app/main/default/objects/Escalation_Log__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <label>Old Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>OldOwnerEscalationLogs</relationshipName>
</CustomField>